# AnyWs

./: .gitignore  Dockerfile  entrypoint  nb_log_config.py  pyproject.toml
app/: .env.dev  .env.prod  routers.py  settings.py  urls.py
app/common/: AdminMeta.py  Constants.py  LoggerCenter.py
app/common/decorator/: AdminDecorator.py  FunboostDecorator.py  ViewSetDecorator.py
app/common/exceptionbox/: __init__.py  base.py  errors.py  middleware.py  success_response.py
app/common/mixins/: CheckAndTransmitUserParamCreateModelMixin.py  CustomCreateModelMixin.py  (+4 more)
app/nginx/: nginx.conf
app/uwsgi/: uwsgi.ini
card_module/: admin.py  apps.py
card_module/migrations/: 0001_initial.py  0002_alter_wordcard_create_time_and_more.py
card_module/models/: WordCard.py
card_module/serializers/: WordCardModelSerializer.py
card_module/views/: WordCardViewSet.py
memory_module/: apps.py  models.py  signals.py
memory_module/migrations/: 0001_initial.py
memory_module/serializers/: MemoryScheduleModelSerializer.py
memory_module/views/: MemoryScheduleViewSet.py
system_module/: admin.py  apps.py  models.py  serializers.py  views.py
system_module/migrations/: 0001_initial.py
system_module/views/: SystemConfigurationViewSet.py
translation_module/: apps.py  urls.py  views.py
translation_module/utils/: chatgpt_helper.py
user_module/: apps.py  exceptions.py  models.py  signals.py  tests.py  urls.py
user_module/migrations/: 0001_initial.py
user_module/serializers/: UserModelSerializer.py
user_module/views/: UserProfileViewSet.py  UserViewSet.py
(+3 files in other folders)
